fix overflow

--- a/result.css
+++ b/result.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
+  overflow-x: hidden;
   min-height: 100vh;
   background: #ecf2ff;
 }
